# db-connect

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  app-licence-verifier.md  components.json  design-system.md  fixes.md  index.html  package-lock.json  package.json  plan.md  skills-lock.json  todo.md  vite.config.ts
.commandcode/taste/: taste.md
.githooks/: post-commit  pre-commit
.github/workflows/: release.yml
docs/plans/: 2026-04-26-batch8-query-result-ux.md  2026-04-26-settings-page-design.md
keys/: license_public.pem
src/: App.css  App.tsx  database-drivers.ts  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  import_export.rs  lib.rs  license.rs  monitoring.rs  sql_import.rs  ssh.rs  storage.rs  types.rs
src-tauri/src/db/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis_driver.rs  registry.rs  sqlite.rs
src/components/layout/: CommandPalette.tsx  ConnectionDialog.tsx  FunctionOutput.tsx  ImportExportDialog.tsx  LicenseActivationDialog.tsx  Onboarding.tsx  QueryEditor.tsx  ResultsView.tsx  RightPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  (+16 more)
src/hooks/: use-mobile.test.tsx
src/lib/: db-functions.test.ts  db-functions.ts  db-ui.tsx  encryption.ts  export-utils.test.ts  export-utils.ts  fonts.ts  license.ts  monitoring.ts  tauri-api.test.ts  tauri-api.ts
src/store/: useAppStore.test.ts  useAppStore.ts
src/styles/: globals.css
tests/: engine-fields.test.tsx  schema-context.test.tsx  setup.tsx  test-utils.tsx
(+125 files in other folders)
